syntax = "proto3";

option csharp_namespace = "KafkaClone.Shared.Grpc";

service RaftService {
  // Used by candidates to gather votes
  rpc RequestVote (RequestVoteRequestProto) returns (RequestVoteResponseProto);

  // Used for heartbeats and log replication
  rpc AppendEntries (AppendEntriesRequestProto) returns (AppendEntriesResponseProto);

  // Used to forward commands from followers to leader
  rpc ForwardCommand (CommandProto) returns (ForwardCommandResponseProto);
}

message RequestVoteRequestProto {
  int32 broker_id = 1;
  int32 election_term = 2;
  int64 last_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteResponseProto {
  bool verdict = 1;
  int32 term = 2;
}

message AppendEntriesRequestProto {
  int32 term = 1;
  int32 leader_id = 2;
  int64 prev_log_index = 3;
  int32 prev_log_term = 4;
  int64 leader_commit = 5;
  repeated LogEntryProto entries = 6; // A batch of entries
}

message LogEntryProto {
  int32 term = 1;
  int64 index = 2;
  bytes data = 3; // The serialized command (JSON)
}

message AppendEntriesResponseProto {
  bool success = 1;
  int32 term = 2;
  int64 last_log_index = 3; // Helping the leader catch us up
}

message CommandProto {
  bytes data = 1; // Serialized IClusterCommand (JSON)
}

message ForwardCommandResponseProto {
  bool success = 1;
  string error_message = 2;

}